# nahida-group-admin

./: .env.example  .gitignore  README.md  bot.py  config.example.yaml  main.py  pyproject.toml
nahida_group_admin/: __init__.py  config.py
nahida_group_admin/common/: whitelist.py
nahida_group_admin/compat/: __init__.py  group.py
nahida_group_admin/plugins/interaction/: __init__.py  config.py
nahida_group_admin/plugins/mute/: __init__.py  config.py
nahida_group_admin/plugins/ostracism/: __init__.py  config.py
nahida_group_admin/plugins/title/: __init__.py  config.py
